--- a/pom.xml
+++ b/pom.xml
@@ -18,8 +18,8 @@
 
     <properties>
         <java.version>17</java.version>
-        <maven.compiler.source>18</maven.compiler.source>
-        <maven.compiler.target>18</maven.compiler.target>
+<!--        <maven.compiler.source>18</maven.compiler.source>-->
+<!--        <maven.compiler.target>18</maven.compiler.target>-->
     </properties>
 
     <dependencies>
@@ -97,6 +97,12 @@
     </dependencies>
 
     <build>
+     <resources>
+        <resource>
+            <directory>src/main/resources</directory>
+            <filtering>false</filtering>
+        </resource>
+    </resources>
         <plugins>
             <plugin>
                 <groupId>org.springframework.boot</groupId>
