--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,8 @@
 server.port=${PORT:8080}
-spring.datasource.url=jdbc:mysql://db-vollmed-do-user-17817977-0.k.db.ondigitalocean.com:25060/defaultdb?useSSL=true
-spring.datasource.username=doadmin
-spring.datasource.password=AVNS_JNlNiHtI3ouE9pFFNsG
+spring.datasource.url=${DATABASE_URL}
+spring.datasource.username=${DATABASE_USER}
+spring.datasource.password=${DATABASE_PASSWORD}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-
 
 # Configuração do Flyway
 #spring.flyway.url=${spring.datasource.url}
