:chart_with_upwards_trend:application.properties visualizar SQL

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,6 +4,15 @@ spring.datasource.username=${DATABASE_USER}
 spring.datasource.password=${DATABASE_PASSWORD}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
+# Ativa o log do Hibernate
+spring.jpa.show-sql=true
+
+# Configura o formato do log SQL
+spring.jpa.properties.hibernate.format_sql=true
+
+# Define o nível de log para o SQL
+logging.level.org.hibernate.SQL=DEBUG
+
 # Configuração do Flyway
 #spring.flyway.url=${spring.datasource.url}
 #spring.flyway.user=${spring.datasource.username}
