:wrench: Atualiza application.properties para identificar um erros

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,8 +12,9 @@ spring.jpa.properties.hibernate.format_sql=true
 
 # Define o nível de log para o SQL
 logging.level.org.hibernate.SQL=DEBUG
-
 # Configuração do Flyway
+spring.flyway.clean-on-validation-error=true
+spring.flyway.cleanDisabled=false
 #spring.flyway.url=${spring.datasource.url}
 #spring.flyway.user=${spring.datasource.username}
 #spring.flyway.password=${spring.datasource.password}
