--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,8 @@
+# configuração do servidor
 server.port=${PORT:8080}
+server.error.include-stacktrace=never
+
+# configuração do banco de dados
 spring.datasource.url=${DATABASE_URL}
 spring.datasource.username=${DATABASE_USER}
 spring.datasource.password=${DATABASE_PASSWORD}
@@ -15,7 +19,3 @@ logging.level.org.hibernate.SQL=DEBUG
 # Configuração do Flyway
 spring.flyway.clean-on-validation-error=true
 spring.flyway.cleanDisabled=false
-#spring.flyway.url=${spring.datasource.url}
-#spring.flyway.user=${spring.datasource.username}
-#spring.flyway.password=${spring.datasource.password}
-
