:wrench: add path Swagger

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -19,3 +19,7 @@ logging.level.org.hibernate.SQL=DEBUG
 # Configuração do Flyway
 spring.flyway.clean-on-validation-error=true
 spring.flyway.cleanDisabled=false
+
+# Configuração do Swagger
+springdoc.swagger-ui.path=/swagger-ui.html
+springdoc.api-docs.path=/api-docs
