--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,10 +3,11 @@ server.port=${PORT:8080}
 server.error.include-stacktrace=never
 
 # configuração do banco de dados
+# Driver do Postgres
+spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.url=${DATABASE_URL}
 spring.datasource.username=${DATABASE_USER}
 spring.datasource.password=${DATABASE_PASSWORD}
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # Ativa o log do Hibernate
 spring.jpa.show-sql=true
